--- a/fragments/default.html
+++ b/fragments/default.html
@@ -1,1 +1,1 @@
-<main class="default">This is the default content loaded in AJAX, using anticore</main>
+<main class="default">This is the default content loaded in AJAX, using anticore.</main>
